k8s/usenlease-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usenlease-deployment
  namespace: usenlease
  labels:
    app: usenlease-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usenlease-app
  template:
    metadata:
      labels:
        app: usenlease-app
    spec:
      containers:
        - name: combined-images
          image: ngumonelson123/combined-image:v1.2.35
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
