k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: usenlease
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
