k8s/usenlease-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usenlease-service
  namespace: usenlease
  labels:
    app: usenlease-app
spec:
  selector:
    app: usenlease-app
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
