k8s/usenlease-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usenlease-ingress
  namespace: usenlease
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: usenlease.com
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: usenlease-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: usenlease-service
                port:
                  number: 3000
